# satellite-latency-router

./: .gitignore  LICENSE  README.md  pyproject.toml  satellite_router.py  test_router.py
.github/workflows/: ci.yml
docs/: DESIGN.md
examples/: run_demo.py
src/constellation_sim/: __init__.py  constants.py  constellation.py  metrics.py  network.py  orbits.py  routing.py  simulate.py  visualize.py
tests/: test_constellation.py  test_network.py  test_orbits.py  test_routing.py  test_simulate.py
